<?xml version="1.0" encoding="utf-8"?>
<resources>
<!-- Application textes -->
    <string name="app_name">StartDroid</string>
    <string name="codeLink">https://github.com/loicknuchel/StartDroid</string>
    
<!-- General textes -->
    <string name="ret">Retour</string>
    <string name="validate">OK</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="prefs">Préférences</string>
    
<!-- HomeActivity textes -->
    <string name="HA_layout_btn">Layout sample</string>
    <string name="HA_services_btn">Services sample</string>
    <string name="HA_1_btn">button 1</string>
    <string name="HA_2_btn">button 2</string>
    <string name="HA_3_btn">button 3</string>
    <string name="HA_4_btn">button 4</string>

<!-- StartActivity textes -->
    <string name="SAstart_getCode">Get Source Code !!!</string>
    <string name="SAstart_codeAvaiable">Le code source est disponible à cette adresse :</string>
    <string name="SAstart_seeCode">Voulez vous aller à cette adresse ?</string>
    <string name="SAstart_testFeaturetexte">TEST !!!</string>
    <string name="SAstart_goDashboard">Dashboard\nActivity</string>
    <string name="SAstart_goActionBar">ActionBar\nActivity</string>
    <string name="SAstart_goTabActivity">Tab\nActivity</string>
    <string name="SAstart_goSqliteActivity">Sqlite\nActivity</string>
    <string name="SAstart_goServicesActivity">Services\nActivity</string>
    <string name="SAstart_goSampleSettings">Sample Prefs</string>
    <string name="SAstart_readSampleSettings">Read Sample Pref</string>
    <string name="SAstart_isNetworkAvailable">Network available</string>
    <string name="SAstart_NetworkAvailable">network available</string>
    <string name="SAstart_MenuHelp">menuhelp</string>
    <string name="SAstart_MenuFAQ">sousmenufaq</string>
    
<!--     ############ SQLITE ############ -->
<!-- Demo_Sqlite_HostActivity textes -->
    <string name="DSHA_CRUD1">CRUD\nvalues</string>
    <string name="DSHA_CRUD2">CRUD\nnames</string>
    <string name="DSHA_select">multi select</string>
    <string name="DSHA_admin">admin DB</string>
<!-- Demo_Sqlite_CRUDActivity textes -->
    <string name="DSCA_tuto">
		Cet écran vous permet de tester les différentes fonctionnalités basiques de sqlite.
		\nVous pouvez :
		\n - créer une entrée
		\n - voir les entrées existantes
		\n - supprimer une entrée avec un appui long
		\n
		\nHave fun :)
	</string>
    <string name="DSCA_keyvalue">keyValue</string>
    <string name="DSCA_id">id</string>
    <string name="DSCA_key">clé</string>
    <string name="DSCA_value">valeur</string>
    <string name="DSCA_name">nom</string>
    <string name="DSCA_create">Créer</string>
    <string name="DSCA_created">KeyValue created.</string>
    <string name="DSCA_positionClicked">Click on position</string>
    <string name="DSCA_removed">removed</string>
<!-- Demo_Sqlite_SelectActivity textes -->
    <string name="DSSA_name">nom</string>
    <string name="DSSA_search">Affiche les valeurs possédant la même clé que le nom.</string>
<!-- Demo_Sqlite_AdminActivity textes -->
    <string name="DSAA_fill">Remplir la base de données</string>
    <string name="DSAA_drop">Vider la base de données</string>

<!-- ActionBarHomeActivity textes -->
	<string name="ABHA_title">Home</string>
	<string name="ABHA_share">Shared from the ActionBar widget.</string>
	<string name="ABHA_add">Added action.</string>
	<string name="ABHA_remove">Removed action.</string>
	<string name="ABHA_btn_start">Start Progress</string>
	<string name="ABHA_btn_stop">Stop Progress</string>
	<string name="ABHA_btn_clear">Clear actionbar</string>
	<string name="ABHA_btn_restaure">Restaure actionbar</string>
	<string name="ABHA_btn_delShare">Delete share action</string>
	<string name="ABHA_btn_addShare">Add share action</string>
	<string name="ABHA_btn_delAction">Delete other action</string>
	<string name="ABHA_btn_delLast">Delete last action</string>
	<string name="ABHA_btn_addAction">Add new action</string>

<!-- ActionBarOtherActivity textes -->
	<string name="ABOA_share">Shared from the ActionBar widget.</string>
	<string name="ABOA_exemple">Example action</string>
    <string name="ABOA_title">some title</string>
    <string name="ABOA_texte">Home home</string>

<!-- DashboardActivity textes -->
    <string name="DBA_add">add</string>
    <string name="DBA_viewall">view</string>
    <string name="DBA_manage">manage</string>
    <string name="DBA_personalbests">bests</string>
    
<!-- ServicesActivity textes -->
    <string name="SA_serviceScan">Scanner</string>
    <string name="SA_result">Scanner result</string>
    <string name="SA_format">format</string>
    <string name="SA_content">contenu</string>
    <string name="SA_cancelled">Scan annulé</string>
   
<!-- TabHostActivity textes -->
    <string name="THA_first_tab">tab un</string>
    <string name="THA_first_value">TabFirstActivity : Coucou tout le monde</string>
    <string name="THA_second_value">TabFirstActivity : C\'est la meme activite avec un autre parametre</string>
    <string name="THA_third_tab">trois</string>
    <string name="THA_third_value">TabSecondActivity : Autre activite...</string>


<!-- SettingsActivity textes -->
    <string name="SApref_helptitle">Aide</string>
    <string name="SApref_faq">FAQ (todo)</string>
    <string name="SApref_faqclicked">FAQPref clicked</string>
    <string name="SApref_about">A propos</string>
    <string name="SApref_severaltitle">Divers</string>
    <string name="SApref_feedback">Donnez votre avis</string>
    <string name="SApref_share">Partager l\'application</string>
    <string name="SApref_shareapptext">Texte a partager...</string>
    <string name="SApref_friend">Applications amies (todo)</string>
    <string name="SApref_friendclicked">)FriendPref clicked</string>
    <string name="SApref_init">Réinitialiser l\'application</string>
    <string name="SApref_initdone">Application réinitialisée</string>
    <string name="SApref_closetitle">Quitter</string>
    <string name="SApref_close">Quitter l\'application (todo)</string>
    <string name="SApref_closeclicked">ClosePref clicked</string>

<!-- SampleSettingsActivity textes -->
    <string name="SSA_custom_btn_clicked">The custom preference has been clicked</string>
    <string name="SSA_btn_clicked">The preference has been clicked</string>
    <string name="SSA_category_1">First Category</string>
    <string name="SSA_checkbox_title">Checkbox Preference</string>
    <string name="SSA_checkbox_summary">This preference can be true or false</string>
    <string name="SSA_list_title">List Preference</string>
    <string name="SSA_list_summary">This preference allows to select an item in a array</string>
    <string name="SSA_category_2">Second Category</string>
    <string name="SSA_edittext_title">Edit This Text</string>
    <string name="SSA_edittext_summary">This allows you to enter a string</string>
    <string name="SSA_edittext_default">Nothing</string>
    <string name="SSA_ringtone_title">Ringtones</string>
    <string name="SSA_ringtone_summary">Select a ringtone</string>
    <string name="SSA_screen2_title">Second PreferenceScreen</string>
    <string name="SSA_screen2_summary">This is a second PreferenceScreen</string>
    <string name="SSA_edittext2_title">Edit text</string>
    <string name="SSA_edittext2_summary">This is a preference in the second PreferenceScreen</string>
    <string name="SSA_custom_title">Custom Preference</string>
    <string name="SSA_custom_summary">This works almost like a button</string>

<!-- Popup textes -->
	<string name="starttitle">Bienvenue</string>
    <string name="startcontent">
    	Cette popup ne s\'ouvre que lors des premiers lancements.
    	\nBienvenue dans cette application starter. Pour plus d\'informations consultez le about.
    	\n
    	\nVous pouvez revoir cette popup si vous réinitialisez l\'application dans les préférences.
    </string>
    <string name="abouttitle">A propos</string>
    <string name="aboutcontent">
    	L\'application StartDroid contient un projet déjà configuré avec des services souvent utilisés dans les applications.
    	\n
    	\nVoici les étapes nécessaires avant de commencer un projet avec cette application :
    	\n - renommer les packages
    	\n - rechercher dans les layout le package com.knuchel.start.android.widget et le renommer avec votre nouveau package.
    	\n
    	\nPour toute remarque, suggestion ou rapport de bug vous pouvez me contacter par mail à l\'adresse <b>loicknuchel@gmail.com</b> ou par twitter <b>@loicknuchel</b>
    	\n
    	\nSi vous avez des suggestions sur la manière de coder ou l\'architecture du projet, je suis très intéressé par avoir des échanges à ce propos afin de rendre mon starter le plus pratique possible.
    	\nTenez moi aussi au courant de votre utilisation de ce projet et de ce que vous en attendez de manière générale.
    	\n
    	\nHave fun :)
    </string>
    <string name="ratingtitle">Votez pour soutenir cette application</string>
    <string name="ratingcontent">
    	Afin d\'aider et de promouvoir cette application, vous pouvez voter sur le market et laisser un commentaire.
    	\nIl est important pour une application d\'avoir des retours de ses utilisateurs pour être visible et pouvoir s\'améliorer.
    	\n
    	\nVoulez vous noter cette application sur le market ?
    </string>
    <string name="nomoreprint">Ne plus afficher</string>
    
<!-- ExtraService textes -->
    <string name="noScanerFound">Pas de scanner trouvé !</string>
    
<!-- Menus textes -->
    <string name="menusettings">Préférences</string>
    <string name="menuhelp">Aide</string>
    <string name="sousmenufaq">FAQ</string>
    <string name="sousmenuabout">A propos</string>

<!-- ActionBar textes -->
    <string name="actionbar_activity_not_found">Failed to open intent...</string>
    
<!-- arrays textes -->
    <string name="array_text1">titi</string>
    <string name="array_text2">toto</string>
    <string name="array_text3">tata</string>
    <string name="array_text4">tutu</string>
    
</resources>
