<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <com.lknuchel.android.startdroidlight.ui.widget.ActionBar
        android:id="@+id/actionbar"
        style="@style/ActionBar"
        />
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_marginTop="20dip">
	        <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal">
		        <Button
		            android:id="@+id/start_progress"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/ABHA_btn_start" />
		        <Button
		            android:id="@+id/stop_progress"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/ABHA_btn_stop" />
	        </LinearLayout>
	        <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal">
		        <Button
		            android:id="@+id/remove_all_actions"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/ABHA_btn_clear" />
		        <Button
		            android:id="@+id/restaure_all_actions"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/ABHA_btn_restaure" />
	        </LinearLayout>
	        <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal">
		        <Button
		            android:id="@+id/remove_share_action"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/ABHA_btn_delShare" />
		        <Button
		            android:id="@+id/add_share_action"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/ABHA_btn_addShare" />
	        </LinearLayout>
	        <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal">
		        <Button
		            android:id="@+id/remove_other_action"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/ABHA_btn_delAction" />
	        </LinearLayout>
	        <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal">
		        <Button
		            android:id="@+id/remove_last_action"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/ABHA_btn_delLast" />
		        <Button
		            android:id="@+id/add_new_action"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/ABHA_btn_addAction" />
	        </LinearLayout>
	    </LinearLayout>
    </ScrollView>
</LinearLayout>
